src/libsystemd-daemon/sd-daemon.c
@@ -32,11 +32,7 @@
 #include <sys/stat.h>
 #include <sys/socket.h>
 #include <sys/un.h>
-#ifdef __BIONIC__
-#  include <linux/fcntl.h>
-#else
-#  include <sys/fcntl.h>
-#endif
+#include <fcntl.h>
 #include <netinet/in.h>
 #include <stdlib.h>
 #include <errno.h>
